[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://DesertTextures.tres" type="TileSet" id=2]
[ext_resource path="res://Box.tscn" type="PackedScene" id=3]
[ext_resource path="res://CoveTilesNew.tres" type="TileSet" id=4]
[ext_resource path="res://CliffPuzzle.gd" type="Script" id=5]
[ext_resource path="res://SceneChangeBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://CoveDesat.jpg" type="Texture" id=7]
[ext_resource path="res://ThrusterTexture.png" type="Texture" id=8]
[ext_resource path="res://Dialogue.tscn" type="PackedScene" id=9]
[ext_resource path="res://Button.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 63.5696, 28.7653 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27.312, 66.7074 )

[node name="CliffPuzzle" type="Node2D"]
script = ExtResource( 5 )

[node name="Dialogue" parent="." instance=ExtResource( 9 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 0.1 )
motion_mirroring = Vector2( 1920, 1080 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2.83163, -0.943878 )
texture = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1252.3, 121.037 )

[node name="TileMap (Level)" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( -327696, 0, 1, -327695, 0, 1, -327694, 0, 1, -327693, 0, 1, -327692, 0, 1, -327691, 0, 1, -327690, 0, 1, -327689, 0, 1, -327688, 0, 2, -262160, 0, 262144, -262159, 0, 262144, -262158, 0, 262144, -262157, 0, 262144, -262156, 0, 262144, -262155, 0, 262144, -262154, 0, 262144, -262153, 0, 262144, -327656, 0, 65537, -327655, 0, 1, -327654, 0, 1, -327653, 0, 1, -327652, 0, 1, -327651, 0, 1, -327650, 0, 1, -327649, 0, 1, -327648, 0, 1, -196624, 0, 327680, -196623, 0, 327680, -196622, 0, 327680, -196621, 0, 327680, -196620, 0, 327680, -196619, 0, 327680, -196618, 0, 327680, -196617, 0, 327680, -262119, 0, 262144, -262118, 0, 262144, -262117, 0, 262144, -262116, 0, 262144, -262115, 0, 262144, -262114, 0, 262144, -262113, 0, 262144, -262112, 0, 262144, -131088, 0, 393216, -131087, 0, 393216, -131086, 0, 393216, -131085, 0, 458753, -131084, 0, 458752, -131083, 0, 458753, -131082, 0, 458752, -131081, 0, 393216, -196583, 0, 327680, -196582, 0, 327680, -196581, 0, 327680, -196580, 0, 327680, -196579, 0, 327680, -196578, 0, 327680, -196577, 0, 327680, -196576, 0, 327680, -65552, 0, 393216, -65551, 0, 393216, -65550, 0, 393216, -65549, 0, 458752, -65548, 0, 458753, -65547, 0, 458752, -65546, 0, 393217, -65545, 0, 393216, -131047, 0, 458752, -131046, 0, 393216, -131045, 0, 458752, -131044, 0, 393216, -131043, 0, 458752, -131042, 0, 393216, -131041, 0, 393216, -131040, 0, 393216, -16, 0, 393216, -15, 0, 393216, -14, 0, 393216, -13, 0, 393216, -12, 0, 393216, -11, 0, 393216, -10, 0, 458753, -9, 0, 393216, -65511, 0, 458752, -65510, 0, 458752, -65509, 0, 458753, -65508, 0, 393216, -65507, 0, 393216, -65506, 0, 458752, -65505, 0, 458752, -65504, 0, 393216, 65520, 0, 393216, 65521, 0, 393216, 65522, 0, 393216, 65523, 0, 458752, 65524, 0, 393216, 65525, 0, 458752, 65526, 0, 458752, 65527, 0, 458752, 65528, 0, 1, 65529, 0, 1, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 1, 65535, 0, 1, 0, 0, 2, 25, 0, 393216, 26, 0, 458752, 27, 0, 393216, 28, 0, 393216, 29, 0, 393216, 30, 0, 393216, 31, 0, 393216, 32, 0, 458752, 131056, 0, 393216, 131057, 0, 393216, 131058, 0, 393216, 131059, 0, 458752, 131060, 0, 393216, 131061, 0, 458753, 131062, 0, 393216, 131063, 0, 393216, 131064, 0, 262144, 131065, 0, 262144, 131066, 0, 262144, 131067, 0, 262144, 131068, 0, 262144, 131069, 0, 262144, 131070, 0, 262144, 131071, 0, 262144, 65561, 0, 393216, 65562, 0, 393216, 65563, 0, 393216, 65564, 0, 393216, 65565, 0, 393216, 65566, 0, 458753, 65567, 0, 393216, 65568, 0, 458752, 196592, 0, 393216, 196593, 0, 393216, 196594, 0, 458752, 196595, 0, 393216, 196596, 0, 393216, 196597, 0, 393216, 196598, 0, 458752, 196599, 0, 393216, 196600, 0, 327680, 196601, 0, 327680, 196602, 0, 327680, 196603, 0, 327680, 196604, 0, 327680, 196605, 0, 327680, 196606, 0, 327680, 196607, 0, 327680, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 1, 131097, 0, 458753, 131098, 0, 458752, 131099, 0, 393216, 131100, 0, 393216, 131101, 0, 393216, 131102, 0, 393216, 131103, 0, 393216, 131104, 0, 393216, 262128, 0, 393216, 262129, 0, 393216, 262130, 0, 393216, 262131, 0, 393216, 262132, 0, 393216, 262133, 0, 458752, 262134, 0, 393216, 262135, 0, 458753, 262136, 0, 393216, 262137, 0, 393216, 262138, 0, 393216, 262139, 0, 393216, 262140, 0, 458752, 262141, 0, 393216, 262142, 0, 458752, 262143, 0, 393216, 196613, 0, 65537, 196614, 0, 2, 196623, 0, 262144, 196624, 0, 262144, 196625, 0, 262144, 196626, 0, 262144, 196627, 0, 0, 196633, 0, 393216, 196634, 0, 393216, 196635, 0, 393216, 196636, 0, 393216, 196637, 0, 393216, 196638, 0, 393216, 196639, 0, 393216, 196640, 0, 393216, 327664, 0, 393216, 327665, 0, 393216, 327666, 0, 393216, 327667, 0, 393216, 327668, 0, 393216, 327669, 0, 393216, 327670, 0, 393216, 327671, 0, 393216, 327672, 0, 393216, 327673, 0, 393216, 327674, 0, 458752, 327675, 0, 393216, 327676, 0, 393216, 327677, 0, 458752, 327678, 0, 393216, 327679, 0, 393216, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262159, 0, 327680, 262160, 0, 327680, 262161, 0, 327680, 262162, 0, 327680, 262163, 0, 196609, 262164, 0, 0, 262169, 0, 393216, 262170, 0, 458752, 262171, 0, 393216, 262172, 0, 393216, 262173, 0, 393216, 262174, 0, 393216, 262175, 0, 393216, 262176, 0, 393216, 393200, 0, 393216, 393201, 0, 393216, 393202, 0, 393217, 393203, 0, 393216, 393204, 0, 393216, 393205, 0, 393216, 393206, 0, 393216, 393207, 0, 393216, 393208, 0, 393216, 393209, 0, 393216, 393210, 0, 393216, 393211, 0, 393216, 393212, 0, 393216, 393213, 0, 393216, 393214, 0, 393216, 393215, 0, 393216, 327680, 0, 196609, 327681, 0, 196608, 327682, 0, 65536, 327683, 0, 0, 327695, 0, 393216, 327696, 0, 393216, 327697, 0, 458753, 327698, 0, 458752, 327699, 0, 262144, 327700, 0, 65536, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 393216, 327706, 0, 393216, 327707, 0, 458752, 327708, 0, 458752, 327709, 0, 458752, 327710, 0, 393216, 327711, 0, 393216, 327712, 0, 393216, 458736, 0, 393216, 458737, 0, 393216, 458738, 0, 393216, 458739, 0, 458752, 458740, 0, 393216, 458741, 0, 393216, 458742, 0, 393216, 458743, 0, 393216, 458744, 0, 393216, 458745, 0, 393216, 458746, 0, 458752, 458747, 0, 393216, 458748, 0, 393216, 458749, 0, 458753, 458750, 0, 393216, 458751, 0, 393216, 393216, 0, 262144, 393217, 0, 262144, 393218, 0, 262144, 393219, 0, 65536, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 393217, 393232, 0, 393216, 393233, 0, 393216, 393234, 0, 458753, 393235, 0, 327680, 393236, 0, 262144, 393237, 0, 196608, 393238, 0, 65536, 393239, 0, 196609, 393240, 0, 65536, 393241, 0, 393216, 393242, 0, 458753, 393243, 0, 458752, 393244, 0, 393216, 393245, 0, 393216, 393246, 0, 393216, 393247, 0, 458753, 393248, 0, 393216, 524272, 0, 393216, 524273, 0, 393216, 524274, 0, 393216, 524275, 0, 393216, 524276, 0, 393216, 524277, 0, 393216, 524278, 0, 458752, 524279, 0, 393216, 524280, 0, 393216, 524281, 0, 393216, 524282, 0, 393216, 524283, 0, 393216, 524284, 0, 393216, 524285, 0, 458752, 524286, 0, 393216, 524287, 0, 393216, 458752, 0, 327680, 458753, 0, 327680, 458754, 0, 327680, 458755, 0, 262144, 458756, 0, 196609, 458757, 0, 65536, 458758, 0, 196609, 458759, 0, 65536, 458760, 0, 196608, 458764, 0, 65536, 458765, 0, 196609, 458766, 0, 196608, 458767, 0, 393216, 458768, 0, 458752, 458769, 0, 393216, 458770, 0, 458752, 458771, 0, 393216, 458772, 0, 327680, 458773, 0, 262144, 458774, 0, 262144, 458775, 0, 262144, 458776, 0, 262144, 458777, 0, 393216, 458778, 0, 393216, 458779, 0, 393216, 458780, 0, 458752, 458781, 0, 393216, 458782, 0, 393216, 458783, 0, 393216, 458784, 0, 393216, 589808, 0, 393216, 589809, 0, 393216, 589810, 0, 393216, 589811, 0, 393216, 589812, 0, 393216, 589813, 0, 393216, 589814, 0, 393216, 589815, 0, 393216, 589816, 0, 393216, 589817, 0, 393216, 589818, 0, 393216, 589819, 0, 458752, 589820, 0, 393216, 589821, 0, 458752, 589822, 0, 393216, 589823, 0, 458753, 524288, 0, 393216, 524289, 0, 458752, 524290, 0, 458752, 524291, 0, 327680, 524292, 0, 262144, 524293, 0, 262144, 524294, 0, 262144, 524295, 0, 262144, 524296, 0, 262144, 524300, 0, 262144, 524301, 0, 262144, 524302, 0, 262144, 524303, 0, 458752, 524304, 0, 458753, 524305, 0, 458752, 524306, 0, 393216, 524307, 0, 458752, 524308, 0, 393216, 524309, 0, 327680, 524310, 0, 327680, 524311, 0, 327680, 524312, 0, 327680, 524313, 0, 393216, 524314, 0, 458752, 524315, 0, 393216, 524316, 0, 393216, 524317, 0, 393216, 524318, 0, 393216, 524319, 0, 393216, 524320, 0, 393216, 655344, 0, 393216, 655345, 0, 393216, 655346, 0, 393216, 655347, 0, 393216, 655348, 0, 393216, 655349, 0, 393216, 655350, 0, 393217, 655351, 0, 393216, 655352, 0, 393216, 655353, 0, 393216, 655354, 0, 393216, 655355, 0, 393216, 655356, 0, 393216, 655357, 0, 393216, 655358, 0, 393216, 655359, 0, 393216, 589824, 0, 393216, 589825, 0, 458752, 589826, 0, 393216, 589827, 0, 393216, 589828, 0, 327680, 589829, 0, 327680, 589830, 0, 327680, 589831, 0, 327680, 589832, 0, 327680, 589833, 0, 327680, 589834, 0, 327680, 589835, 0, 327680, 589836, 0, 327680, 589837, 0, 327680, 589838, 0, 327680, 589839, 0, 393216, 589840, 0, 393216, 589841, 0, 458752, 589842, 0, 393216, 589843, 0, 458752, 589844, 0, 393216, 589845, 0, 458752, 589846, 0, 458752, 589847, 0, 393216, 589848, 0, 393216, 589849, 0, 393216, 589850, 0, 458752, 589851, 0, 393216, 589852, 0, 458753, 589853, 0, 458752, 589854, 0, 393216, 589855, 0, 393216, 589856, 0, 393216, 720880, 0, 393216, 720881, 0, 393216, 720882, 0, 393216, 720883, 0, 393216, 720884, 0, 393216, 720885, 0, 393216, 720886, 0, 393216, 720887, 0, 393216, 720888, 0, 393216, 720889, 0, 393216, 720890, 0, 458752, 720891, 0, 393216, 720892, 0, 393216, 720893, 0, 393216, 720894, 0, 458753, 720895, 0, 458752, 655360, 0, 393216, 655361, 0, 393216, 655362, 0, 458753, 655363, 0, 393216, 655364, 0, 458752, 655365, 0, 393216, 655366, 0, 393216, 655367, 0, 393216, 655368, 0, 393216, 655369, 0, 393216, 655370, 0, 393216, 655371, 0, 458753, 655372, 0, 458752, 655373, 0, 393216, 655374, 0, 458752, 655375, 0, 458752, 655376, 0, 393216, 655377, 0, 393216, 655378, 0, 393216, 655379, 0, 458752, 655380, 0, 393216, 655381, 0, 393216, 655382, 0, 393216, 655383, 0, 393216, 655384, 0, 458752, 655385, 0, 393216, 655386, 0, 393216, 655387, 0, 393216, 655388, 0, 393216, 655389, 0, 393216, 655390, 0, 393216, 655391, 0, 393216, 655392, 0, 393216, 786416, 0, 393216, 786417, 0, 393216, 786418, 0, 393216, 786419, 0, 393216, 786420, 0, 393216, 786421, 0, 393216, 786422, 0, 393216, 786423, 0, 393216, 786424, 0, 393216, 786425, 0, 393216, 786426, 0, 393216, 786427, 0, 393216, 786428, 0, 393216, 786429, 0, 393216, 786430, 0, 393216, 786431, 0, 393216, 720896, 0, 393216, 720897, 0, 393216, 720898, 0, 458752, 720899, 0, 458752, 720900, 0, 393216, 720901, 0, 393216, 720902, 0, 458752, 720903, 0, 458752, 720904, 0, 458752, 720905, 0, 458752, 720906, 0, 393216, 720907, 0, 393216, 720908, 0, 458752, 720909, 0, 393216, 720910, 0, 393216, 720911, 0, 393216, 720912, 0, 458752, 720913, 0, 393216, 720914, 0, 393216, 720915, 0, 393216, 720916, 0, 393216, 720917, 0, 393216, 720918, 0, 393216, 720919, 0, 393216, 720920, 0, 393216, 720921, 0, 458753, 720922, 0, 393216, 720923, 0, 393216, 720924, 0, 393216, 720925, 0, 393216, 720926, 0, 393216, 720927, 0, 393216, 720928, 0, 393216, 851952, 0, 393216, 851953, 0, 393216, 851954, 0, 393216, 851955, 0, 393216, 851956, 0, 393216, 851957, 0, 393216, 851958, 0, 393216, 851959, 0, 393216, 851960, 0, 393216, 851961, 0, 393216, 851962, 0, 393216, 851963, 0, 393216, 851964, 0, 393216, 851965, 0, 393216, 851966, 0, 393216, 851967, 0, 393216, 786432, 0, 393216, 786433, 0, 393216, 786434, 0, 393216, 786435, 0, 393216, 786436, 0, 393216, 786437, 0, 393216, 786438, 0, 393216, 786439, 0, 393216, 786440, 0, 393216, 786441, 0, 393216, 786442, 0, 393216, 786443, 0, 458753, 786444, 0, 393216, 786445, 0, 393216, 786446, 0, 393216, 786447, 0, 458753, 786448, 0, 393216, 786449, 0, 393216, 786450, 0, 393216, 786451, 0, 393216, 786452, 0, 458753, 786453, 0, 393216, 786454, 0, 393216, 786455, 0, 458753, 786456, 0, 393216, 786457, 0, 393216, 786458, 0, 393216, 786459, 0, 393216, 786460, 0, 393216, 786461, 0, 393216, 786462, 0, 393216, 786463, 0, 393216, 786464, 0, 393216, 917488, 0, 393216, 917489, 0, 393216, 917490, 0, 393216, 917491, 0, 393216, 917492, 0, 393216, 917493, 0, 393216, 917494, 0, 393216, 917495, 0, 393216, 917496, 0, 393216, 917497, 0, 393216, 917498, 0, 393216, 917499, 0, 393216, 917500, 0, 393216, 917501, 0, 393216, 917502, 0, 393216, 917503, 0, 393216, 851968, 0, 393216, 851969, 0, 393216, 851970, 0, 393216, 851971, 0, 393216, 851972, 0, 393216, 851973, 0, 393216, 851974, 0, 393216, 851975, 0, 393216, 851976, 0, 393216, 851977, 0, 393216, 851978, 0, 393216, 851979, 0, 393216, 851980, 0, 393216, 851981, 0, 393216, 851982, 0, 393216, 851983, 0, 393216, 851984, 0, 393216, 851985, 0, 393216, 851986, 0, 393216, 851987, 0, 393216, 851988, 0, 393216, 851989, 0, 393216, 851990, 0, 393216, 851991, 0, 393216, 851992, 0, 393216, 851993, 0, 393216, 851994, 0, 393216, 851995, 0, 393216, 851996, 0, 393216, 851997, 0, 393216, 851998, 0, 393216, 851999, 0, 393216, 852000, 0, 393216 )

[node name="Traps" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
collision_layer = 2
collision_mask = 2
format = 1
tile_data = PoolIntArray( 524297, 0, 458754, 524298, 0, 458754, 524299, 0, 458754 )

[node name="SceneChangeBox" parent="." instance=ExtResource( 6 )]
position = Vector2( 1056.84, -5.8067 )
target_scene = "TestScene"

[node name="Button" parent="." instance=ExtResource( 11 )]
position = Vector2( 1557.4, 315.852 )

[node name="Button2" parent="." instance=ExtResource( 11 )]
position = Vector2( 1388, 315.5 )

[node name="Boxes" type="Node2D" parent="."]

[node name="Box" parent="Boxes" instance=ExtResource( 3 )]
position = Vector2( 1540.65, 212.471 )

[node name="Box2" parent="Boxes" instance=ExtResource( 3 )]
position = Vector2( -394.472, -41.3613 )

[node name="Box3" parent="Boxes" instance=ExtResource( 3 )]
position = Vector2( -476.296, -39.5308 )

[node name="Arch" type="Node2D" parent="."]

[node name="BackArch" type="TileMap" parent="Arch"]
z_index = -10
z_as_relative = false
tile_set = ExtResource( 2 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65520, 3, 0 )

[node name="FrontArch" type="TileMap" parent="Arch"]
tile_set = ExtResource( 2 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65519, 2, 0 )

[node name="Thruster" type="Area2D" parent="."]
position = Vector2( 1143.91, 92.6535 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Thruster"]
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Thruster"]
shape = SubResource( 1 )

[node name="Dialogue2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dialogue2"]
position = Vector2( 1062.37, 62.5573 )
shape = SubResource( 2 )
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="released" from="Button" to="." method="_on_Button_released"]
[connection signal="pressed" from="Button2" to="." method="_on_Button_pressed"]
[connection signal="released" from="Button2" to="." method="_on_Button_released"]
[connection signal="body_entered" from="Thruster" to="." method="_on_Thruster_body_entered"]
[connection signal="body_entered" from="Dialogue2" to="." method="_on_Dialogue2_body_entered"]
